tests/assembler/bad/record_in_code.j
.class public super test
.super java/lang/Object

.method public static varargs main : ([Ljava/lang/String;)V
    .code stack 94 locals 2
        return

        .record
        .end record
    .end code
.end method
